feat: :sparkles: Entities andtheir configurations added

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -23,6 +23,12 @@
     ]
   },
   "ConnectionStrings": {
-    "SqlServer" : ""
+    "SqlServer" : "Server=GRANATO\\JOSEPH_SQLSERVER;Database=Courses;Integrated Security=true;TrustServerCertificate=true;"
+  },
+  "JWT": {
+    "Key": "njMCY^UbEskeAFL6eDzHuqY!s^x6Qrwe",
+    "Issuer": "CourseApi",
+    "Audience": "CourseApiUser",
+    "DurationInMinutes":  5
   }
 }
