feat: :card_file_box: Improve database structure

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -28,7 +28,7 @@
   "JWT": {
     "Key": "njMCY^UbEskeAFL6eDzHuqY!s^x6Qrwe",
     "Issuer": "CourseApi",
-    "Audience": "CourseApiUser",
+    "Audience": "http://localhost:5275",
     "DurationInMinutes":  10
   }
 }
