Database assets added

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -23,7 +23,7 @@
     ]
   },
   "ConnectionStrings": {
-    "SqlServer" : "PUT THE DATABASE CONNECTION STRING HERE"
+    "SqlServer" : "Server=GRANATO\\JOSEPH_SQLSERVER;Database=Courses;Integrated Security=true;TrustServerCertificate=true;"
   },
   "JWT": {
     "Key": "njMCY^UbEskeAFL6eDzHuqY!s^x6Qrwe",
